--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <th scope="col">o/e</th>
             <th scope="col">h/l</th>
             <th scope="col">
-              <button type="button" class="btn btn-warning" id="enter_number">Enter</button>
+              <button type="button" class="btn btn-warning" id="enter_number">Generate New Set</button>
             </th>
           </tr>
         </thead>
